Fix descenders getting cut off

--- a/css/chat.less
+++ b/css/chat.less
@@ -50,6 +50,7 @@ z-index: 5;
   flex-flow: row nowrap;
   align-items: flex-start;
   overflow: hidden;
+  padding-bottom: 1px; // to keep descenders in multiline messages from getting cut off
 
   .nick {
     line-height: 1.2em;
